--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
+   <!-- <parent>
         <groupId>org.codetab</groupId>
         <artifactId>extended-multi</artifactId>
         <version>1.0</version>
-    </parent>
+    </parent>-->
     <artifactId>app</artifactId>
     <name>app</name>
 
